--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<h1>
-<body>hello how r u?..
-i'm fine thank u</body>
-</h1>
+<body>
+<h1>i'm fine thank u</h1>
+<h2>Hello</h2>
+</body>
 </html>
